<package>
  <name>harvestbot_gazebo</name>
  <version>0.1.0</version>
  <description>harvestbot_gazebo</description>
  <maintainer email="aga3134@gmail.com">Aga</maintainer>

  <license>BSD</license>

  <url type="website"></url>
  <url type="bugtracker"></url>
  <url type="repository"></url>

  <author email="aga3134@gmail.com">Aga</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
